make videos small

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@ layout: default
 
  	<p>Cast magic in real time by typing out spells, as if you were reciting a poem or prayer. Combine magic words to compose unique and surprising spells.</p>
 	<div class="video-holder">
-	<video class="frontpage-feature" width="100%" autobuffer="autobuffer" height="auto" muted playsinline autoplay="autoplay" loop poster="https://wintercastgame.com/images/speech-demo.png">
-		<source src="https://wintercastgame.com/video/magic-demo.mp4" type="video/mp4">
-		<source src="https://wintercastgame.com/video/magic-demo.webm" type="video/webm">
+	<video class="frontpage-feature" width="100%" autobuffer="autobuffer" height="auto" muted playsinline autoplay="autoplay" loop poster="https://wintercastgame.com/images/magic-demo.png">
+		<source src="https://wintercastgame.com/video/magic-demo-small.mp4" type="video/mp4">
+		<!-- <source src="https://wintercastgame.com/video/magic-demo.webm" type="video/webm"> -->
 	</video>
 	</div>
 
@@ -47,8 +47,8 @@ layout: default
 	
 	<div class="video-holder">
 	<video class="frontpage-feature" width="100%" autobuffer="autobuffer" height="auto" muted playsinline autoplay="autoplay" loop poster="https://wintercastgame.com/images/speech-demo.png">
-		<source src="https://wintercastgame.com/video/speech-demo.mp4" type="video/mp4">
-		<source src="https://wintercastgame.com/video/speech-demo.webm" type="video/webm">
+		<source src="https://wintercastgame.com/video/speech-demo-small.mp4" type="video/mp4">
+		<!-- <source src="https://wintercastgame.com/video/speech-demo.webm" type="video/webm"> -->
 	</video>
 	</div>
 
@@ -57,8 +57,8 @@ layout: default
 
  	<div class="video-holder">
 	<video  class="frontpage-feature"  width="100%" height="auto" autobuffer="autobuffer" autoplay="autoplay" loop muted playsinline poster="https://wintercastgame.com/images/place-spirit.png">
-		<source src="https://wintercastgame.com/video/walk.mp4" type="video/mp4">		
-		<source src="https://wintercastgame.com/video/walk.webm" type="video/webm">
+		<source src="https://wintercastgame.com/video/walk-demo-small.mp4" type="video/mp4">		
+		<!-- <source src="https://wintercastgame.com/video/walk.webm" type="video/webm"> -->
 	</video>
 	</div>
 
