--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ layout: default
 
 	{% include mailchimp-signup.html %}
 
- 	<h5>If you’re interested in knowing more, or just want to shoot me a question, reach out at <a href="mailto:sam@wintecastgame.com">sam@wintecastgame.com</a></h5>
+ 	<h5>If you’re interested in knowing more, or just want to shoot me a question, reach out at <a href="mailto:sam@wintercastgame.com">sam@wintercastgame.com</a></h5>
 
  	<p><a href="#nav">Back to top</a></p>
 
