--- a/presskit.html
+++ b/presskit.html
@@ -6,9 +6,9 @@ layout: default
 <html><head>
 <meta http-equiv="content-type" content="text/html; charset=windows-1252"><title>presskit() - spend time making games, not press</title>
 
-<link href="presskit()%20-%20spend%20time%20making%20games,%20not%20press_files/promopage.css" rel="stylesheet" type="text/css">
-<link href="presskit()%20-%20spend%20time%20making%20games,%20not%20press_files/uikit.css" rel="stylesheet" type="text/css">
-
+<link href="/presskit/promopage.css" rel="stylesheet" type="text/css">
+<link href="/presskit/uikit.css" rel="stylesheet" type="text/css">
+<!-- 
 <link rel="shortcut icon" type="image/x-icon" href="http://dopresskit.com/favicon.ico">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta property="og:type" content="website">
@@ -17,7 +17,7 @@ layout: default
 <meta property="og:description" content="presskit() (pronounced 'do presskit') is the completely free solution to fast, simple &amp; beautiful press kits.">
 <meta property="og:image" content="https://dopresskit.com/largeicon.png">
 <link rel="image_src" href="https://dopresskit.com/largeicon.png"> 
-
+ -->
 <script type="text/javascript" async="" src="presskit()%20-%20spend%20time%20making%20games,%20not%20press_files/ga.js"></script><script type="text/javascript" src="presskit()%20-%20spend%20time%20making%20games,%20not%20press_files/jquery.js"></script>
 <script type="text/javascript">
   var _gaq = _gaq || [];
