--- a/presskit.html
+++ b/presskit.html
@@ -20,7 +20,7 @@ layout: default
 <link rel="image_src" href="https://dopresskit.com/largeicon.png"> 
  -->
 <script type="text/javascript" async="" src="/presskit/ga.js"></script>
-<script type="text/javascript" src="/press/jquery.js"></script>
+<script type="text/javascript" src="/presskit/jquery.js"></script>
 <script type="text/javascript">
   var _gaq = _gaq || [];
   _gaq.push(['_setAccount', 'UA-27474695-2']);
