--- a/presskit.html
+++ b/presskit.html
@@ -1,6 +1,5 @@
 --- 
 title: Presskit
-layout: default 
 ---
 
 <html><head>
@@ -111,14 +110,14 @@ layout: default
 
 <hr>
 <h2 id="videos">Videos</h2>
-<a href=""><div class="uk-alert">download the trailer from dropbox</div></a>
+<a href=""><div class="uk-alert">Download the trailer from dropbox</div></a>
 <div class="uk-responsive-width iframe-container">
     <iframe src="/videos/trailer.mp4" allowfullscreen="" frameborder="0"></iframe>
 </div>
 
 <hr>
 <h2 id="images">Images</h2>
-<a href=""><div class="uk-alert">download all images from dropbox</div></a>
+<a href=""><div class="uk-alert">Download all images from dropbox</div></a>
 
 <div class="uk-grid images" style="position: relative; height: 1300px;">
     <div class="uk-width-medium-1-2" style="position: absolute; left: 0px; top: 0px;">
@@ -177,7 +176,7 @@ layout: default
     <div class="uk-width-medium-1-2">
         <h2 id="team">Team</h2>
         <p>
-            <strong>Sam Ballard</strong><br><a href="www.sunlightafterdark.com">Creator, Programmer, Artist</a>
+            <strong>Sam Ballard</strong><br><a href="http://www.sunlightafterdark.com">Creator, Programmer, Artist</a>
         </p>
         <p>
             <strong>Georgia Iacovou</strong><br><a href="https://twitter.com/Geoiac">Writer</a>
