--- a/index.html
+++ b/index.html
@@ -32,10 +32,11 @@ layout: default
 	</div>
 	<!-- video -->
 
-	<h5>Wintercast is an action-adventure rpg where you are a vampire wizard, trying to make friends during a civil war.</h5>
- 	
+	<h5>Wintercast is an action adventure where you are a vampire, trying to make friends during a civil war.</h5>
 
- 	<p>Cast magic in real time by typing out spells, as if you were reciting a poem or prayer. Combine magic words to compose unique and surprising spells.</p>
+	<h6>You've become a vampire and lost your home. Through learning magic words and making aliances you travel the haunted and warring lands, hoping to return to some kind of safety.</h6>
+ 	
+ 	<p>Cast magic in real time by typing out spells, as if you were reciting a poem or prayer. Combine magic words to compose unique and powerful effects.</p>
 	<div class="video-holder">
 	<video class="frontpage-feature" width="100%" autobuffer="autobuffer" height="auto" muted playsinline autoplay="autoplay" loop poster="https://wintercastgame.com/images/magic-demo.png">
 		<source src="https://wintercastgame.com/video/magic-demo-small.mp4" type="video/mp4">
@@ -43,7 +44,7 @@ layout: default
 	</video>
 	</div>
 
-	<p>Make friends, negotiate alliances, or kill everybody; After all, you are a vampire.</p>
+	<p>In a world in turmoil, decide who to trust, betray, or fight. Anyone could be your friend or enemy.</p>
 	
 	<div class="video-holder">
 	<video class="frontpage-feature" width="100%" autobuffer="autobuffer" height="auto" muted playsinline autoplay="autoplay" loop poster="https://wintercastgame.com/images/speech-demo.png">
