--- a/presskit.html
+++ b/presskit.html
@@ -95,11 +95,11 @@ title: Presskit
                 
                     <h2 id="features">Features</h2>
                         <ul>
-                            <li>Cast magic: type out spells in real time, and combine magic words for unique and surprising effects</li>
+                            <li>Cast magic: type out spells in real time, and combine magic words for unique and surprising effects.</li>
                             <li>Manage relationships: you decide who to trust, befriend, or fight. Anyone can be your friend or enemy.</li>
-                            <li>Story driven: In a capital on the brink on civil war you can be the key to peace, or set it up for destruction</li>
-                            <li>Your actions have consequences: shape the world around you by interacting with people and places in different ways.</li>
-                            <li>Magical world: it's rich and got wizards and ghosts myths</li>
+                            <li>Story driven: In a capital on the brink of civil war you can be the key to peace, or set it up for destruction.</li>
+                            <li>Your actions have consequences: shape the world around you by interacting with characters and places in different ways.</li>
+                            <li>Magical world: it's rich with wizards, ghosts and myths.</li>
                         </ul>
 
                 <div class="clear">
