--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@ layout: default
 	</div>
 	<!-- video -->
 
-	<h5>Wintercast is an action adventure where you are a vampire, trying to make friends during a civil war.</h5>
+	<!-- <h5>A haunting adventure where you are a vampire, trying to make friends during a civil war.</h5> -->
 
-	<h6>You've become a vampire and lost your home. Through learning magic words and making aliances you travel the haunted and warring lands, hoping to return to some kind of safety.</h6>
+	<h5>You've become a vampire and lost your home. Forced to travel through haunted and warring lands, you learn magic words and make alliances, in hopes of finding solace</h5>
  	
  	<p>Cast magic in real time by typing out spells, as if you were reciting a poem or prayer. Combine magic words to compose unique and powerful effects.</p>
 	<div class="video-holder">
@@ -54,8 +54,8 @@ layout: default
 	</div>
 
 
- 	<p>Discover the world and become immersed in the story; No skill tree, inventory management, or grinding.</p>
-
+ 	<p>Explore the rich world of ghosts and myths and can shape it through your actions. You you can be the key to peace, or set it up for destruction</p>
+ 	
  	<div class="video-holder">
 	<video  class="frontpage-feature"  width="100%" height="auto" autobuffer="autobuffer" autoplay="autoplay" loop muted playsinline poster="https://wintercastgame.com/images/place-spirit.png">
 		<source src="https://wintercastgame.com/video/walk-demo-small.mp4" type="video/mp4">		
