--- a/presskit.html
+++ b/presskit.html
@@ -97,7 +97,7 @@ title: Presskit
                         <ul>
                             <li>Cast magic: type out spells in real time, and combine magic words for unique and surprising effects.</li>
                             <li>Manage relationships: you decide who to trust, befriend, or fight. Anyone can be your friend or enemy.</li>
-                            <li>Story driven: In a capital on the brink of civil war you can be the key to peace, or set it up for destruction.</li>
+                            <li>Story driven: In a land on the brink of civil war you can be the key to peace, or set it up for destruction.</li>
                             <li>Your actions have consequences: shape the world around you by interacting with characters and places in different ways.</li>
                             <li>Magical world: it's rich with wizards, ghosts and myths.</li>
                         </ul>
