little copy edit

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ layout: default
 
 	<!-- <h5>A haunting adventure where you are a vampire, trying to make friends during a civil war.</h5> -->
 
-	<h5>You've become a vampire and lost your home. Forced to travel through haunted and warring lands, you learn magic words and make alliances, in hopes of finding solace</h5>
+	<h5>You've become a vampire and lost your home. Forced to travel through haunted and warring lands, you learn magic words and make alliances, in hopes of finding solace.</h5>
  	
  	<p>Cast magic in real time by typing out spells, as if you were reciting a poem or prayer. Combine magic words to compose unique and powerful effects.</p>
 	<div class="video-holder">
@@ -54,7 +54,7 @@ layout: default
 	</div>
 
 
- 	<p>Explore the rich world of ghosts and myths and can shape it through your actions. You you can be the key to peace, or set it up for destruction</p>
+ 	<p>Explore the rich world of ghosts and myths and shape it through your actions. You you can be the key to peace, or set it up for destruction</p>
  	
  	<div class="video-holder">
 	<video  class="frontpage-feature"  width="100%" height="auto" autobuffer="autobuffer" autoplay="autoplay" loop muted playsinline poster="https://wintercastgame.com/images/place-spirit.png">
