--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@ layout: default
 	<div class="team">
 	<div class="contact-info">
 		<img alt="Sam Ballard Image" src="/images/sam-profile.png">
-		<p>Sam Ballard // Artist + Developer</p>
+		<p>Sam Ballard // Designer + Developer</p>
 		<p><a href="mailto:sam@wintecastgame.com">sam@wintecastgame.com</a></p>
 		<p><a href="https://twitter.com/BaronBlackmore">@BaronBlackmore</a></p>
 	</div>
