--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ layout: default
 	</div>
 
 
- 	<p>Explore the rich world of ghosts and myths and shape it through your actions. You you can be the key to peace, or set it up for destruction</p>
+ 	<p>Explore the rich world of ghosts and myths and shape it through your actions. You you can be the key to peace, or set it up for destruction.</p>
  	
  	<div class="video-holder">
 	<video  class="frontpage-feature"  width="100%" height="auto" autobuffer="autobuffer" autoplay="autoplay" loop muted playsinline poster="https://wintercastgame.com/images/place-spirit.png">
@@ -63,7 +63,7 @@ layout: default
 	</video>
 	</div>
 
-	<h5>It’s currently in production. If you’re interested to see it’s development, you can keep up to date on progress <a href="/blog">in the blog,</a> where we also go into the game design.
+	<h5>It’s currently in production. If you’re interested to see it’s development, you can keep up to date on progress <a href="/blog">in the blog,</a> where I also go into the game design.
 	<br>
 	<br>
 	Plus, If you want to test it out, subscribe for updates and I'll mail you the alpha battle simulation. (when I have one >_>)</h5>
